--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ grid-template-columns: 20% 20% 20% 20%;
 body{
   background-color:#383d58;
   color: white;
-  
+
 }
 
 body{
@@ -81,7 +81,7 @@ body{
 <body>
   <header class="cabecalho">
 
-    <img class="cabecalho-imagem" src="alurastart logo.png"  width="350px" alt="logo da alura start">
+    <img class="cabecalho-imagem" src="/home/escola/Área de Trabalho/img/alurastart logo 1.png"  width="350px" alt="logo da alura start">
     <ul  class="cabecalho-lista-item">
 <li class="cabecalho-lista-item">Estudante</li>
 <li class="cabecalho-lista-item">Escola</li>
@@ -96,32 +96,32 @@ body{
   <p class="escola-texto-um">A escola Alura foi fundada em 2010 com o objetivo de ensinar Pensamento Computacional através da Programação.  </p>
   <p class="escola-texto-dois">A turma mais famosa é a Segunda Série A. Uma turma diversa e engajada, as vezes, um pouco bagunceira, mas que entrega excelentes resultados!</p>
   </div>
-<img src="Formula-bro.png" width="400" alt="monitor imagem" >
+<img src="/home/escola/Área de Trabalho/img/Formula-bro.png" width="400" alt="monitor imagem" >
 </section>
 <section class="Estudante">
   <h2 class="Estudante-titulo"> Quem são nossos estudantes?</h2>
 <div class="estudante-todos">
   <div class="estudante-div">
-  <img class="estudante-imagem"  src="Marcelo.jpeg" alt="foto do estudante Marcelo">
-  <img class="estudante-icone" src="instagram.png" alt=”Instagram”>
-<img class="estudante-icone" src="github.png" alt=”Github”>
-<img class="estudante-icone" src="linkedin.png" alt=”LinkedIn”>
+  <img class="estudante-imagem"  src="/home/escola/Área de Trabalho/img/Marcelo 1.png" alt="foto do estudante Marcelo">
+  <img class="estudante-icone" src="/home/escola/Área de Trabalho/img/instagram.png" alt=”Instagram”>
+<img class="estudante-icone" src="/home/escola/Área de Trabalho/img/github.png" alt=”Github”>
+<img class="estudante-icone" src="/home/escola/Área de Trabalho/img/linkedin.png" alt=”LinkedIn”>
 <h3 class="estudante-nome">Marcelo</h3>
   <div class="estudante-div">
-    <img class="estudante-imagem"  src="Marcelo.jpeg" alt="foto do estudante Marcelo">
-    <img class="estudante-icone" src="instagram.png" alt=”Instagram”>
-  <img class="estudante-icone" src="github.png" alt=”Github”>
-  <img class="estudante-icone" src="linkedin.png" alt=”LinkedIn”>
+    <img class="estudante-imagem"  src="/home/escola/Área de Trabalho/img/Marcelo 1.png" alt="foto do estudante Marcelo">
+    <img class="estudante-icone" src="/home/escola/Área de Trabalho/img/instagram.png" alt=”Instagram”>
+  <img class="estudante-icone" src="/home/escola/Área de Trabalho/img/github.png" alt=”Github”>
+  <img class="estudante-icone" src="/home/escola/Área de Trabalho/img/linkedin.png" alt=”LinkedIn”>
   <h3 class="estudante-nome">Marcelo</h3>
     <div class="estudante-div">
-      <img class="estudante-imagem"  src="Marcelo.jpeg" alt="foto do estudante Marcelo">
-      <img class="estudante-icone" src="instagram.png" alt=”Instagram”>
-    <img class="estudante-icone" src="github.png" alt=”Github”>
-    <img class="estudante-icone" src="linkedin.png" alt=”LinkedIn”>
+      <img class="estudante-imagem"  src="/home/escola/Área de Trabalho/img/Marcelo 1.png" alt="foto do estudante Marcelo">
+      <img class="estudante-icone" src="/home/escola/Área de Trabalho/img/instagram.png" alt=”Instagram”>
+    <img class="estudante-icone" src="/home/escola/Área de Trabalho/img/github.png" alt=”Github”>
+    <img class="estudante-icone" src="/home/escola/Área de Trabalho/img/linkedin.png" alt=”LinkedIn”>
     <h3 class="estudante-nome">Marcelo</h3>
         </div>
 </section>
-  
+
 
 </body>
 </html>
